--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "http-errors": "~1.6.2",
     "jade": "~1.11.0",
     "morgan": "^1.9.0",
+    "mysql": "^2.15.0",
     "nodemon": "^1.17.3",
     "winston": "^2.4.2",
     "winston-daily-rotate-file": "^3.1.3"
