--- a/package.json
+++ b/package.json
@@ -17,5 +17,9 @@
     "nodemon": "^1.17.3",
     "winston": "^2.4.2",
     "winston-daily-rotate-file": "^3.1.3"
+  },
+  "devDependencies": {
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-plugin-import": "^2.11.0"
   }
 }
